# ibus-burmese

./: configure.ac  ibus-burmese.spec.in
icons/: Makefile.am
src/: Makefile.am  burmese.xml.in.in  callbacks.h  debug.c  debug.h  engine.c  engine.c.bak  engine.h  main.c
